FLAG-74: added java 17 profile (#72)